--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "set NODE_ENV=test&& mocha ./test/routes --recursive --timeout 10000 --exit"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
@@ -14,18 +16,25 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.0.16",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.1.0",
     "morgan": "~1.9.0",
     "parseurl": "^1.3.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.8.1",
+    "sinon": "^5.0.7",
+    "supertest": "^3.0.0"
   }
 }
