--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "set NODE_ENV=test&& node ./bin/www",
     "test": "set NODE_ENV=test&& mocha ./test/models/task.js --recursive --timeout 10000 --exit"
   },
   "dependencies": {
