--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 		"linebreak-style": 0,
 		"react/forbid-prop-types": 0,
-		"func-names": ["error", "never"]
+		"func-names": ["error", "never"],
+		"no-underscore-dangle": "off"
 	},
 	"parser": "babel-eslint",
 	"settings": {
