--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "socket.io": "^2.1.1",
     "validator": "^10.4.0"
   },
