--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.13",
     "morgan": "~1.9.0",
+    "multer": "^1.4.0",
     "parseurl": "^1.3.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
